--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,11 +33,11 @@ $grid-breakpoints: (
   hd: $hd,
   tv: $tv,
   threek: $threek,
-  fourk: $fourk
+  fourk: $fourk,
 );
 
 $admin-shadow: 0.1875rem 0.375rem 1rem rgba(black, 0.16);
-$admin-timing: 0.5s;
+$admin-timing: 0.4s;
 $admin-colors: (
   primary: var(--primary),
   secondary: LIGHTSLATEGRAY,
@@ -49,7 +49,7 @@ $admin-colors: (
   warning: GOLD,
   danger: INDIANRED,
   error: INDIANRED,
-  snow: WHITE
+  snow: WHITE,
 );
 
 $admin-colors__dark: (
@@ -58,7 +58,7 @@ $admin-colors__dark: (
   light: #333 !important,
   text: WHITESMOKE !important,
   dark: WHITESMOKE !important,
-  snow: #222 !important
+  snow: #222 !important,
 );
 
 #admin-dashboard,
